# PythonSimpleLog

./: README.md  compile_and_upload.ps1  logger.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.devcontainer/containers/: dev.dockerfile
.github/workflows/: release.yml
logger/: __init__.py
logger/metadata/: __author__.py  __licence__.py
logger/tests/: test_logger.py
